--- a/tools/Pliant.Workbench/App.xaml
+++ b/tools/Pliant.Workbench/App.xaml
@@ -2,12 +2,42 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:css="clr-namespace:XamlCSS;assembly=XamlCSS"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <FontFamily x:Key="FiraMono">pack://application:,,,/Ui/Assets/Fonts/#Fira Mono</FontFamily>
-        <FontFamily x:Key="FiraSans">pack://application:,,,/Ui/Assets/Fonts/#Fira Sans</FontFamily>
-        
-        <css:StyleSheet x:Key="appStyleSheet"></css:StyleSheet>
-        <css:StyleSheet x:Key="InternalStyle" xml:space="preserve"></css:StyleSheet>
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Ui/Themes/TextEditor.xaml" />
+                <ResourceDictionary>
+                    <SolidColorBrush x:Key="MenuIconBorderColor" Color="#ADADAD"></SolidColorBrush>
+                    <SolidColorBrush x:Key="MenuIconColor" Color="#ADADAD"></SolidColorBrush>
+                    <SolidColorBrush x:Key="MenuBackColor" Color="#333333"></SolidColorBrush>
+
+                    <SolidColorBrush x:Key="MenuContentBackColor" Color="#252526"></SolidColorBrush>
+                    <SolidColorBrush x:Key="MenuContentIconColor" Color="#ADADAD"></SolidColorBrush>
+                    <system:Double x:Key="MenuContentFontSize">15</system:Double>
+                    <system:Double x:Key="MenuContentIconSize">15</system:Double>
+                    <SolidColorBrush x:Key="MenuContentFontColor" Color="#ADADAD"></SolidColorBrush>
+
+                    <SolidColorBrush x:Key="MenuContentHeaderBackColor" Color="#252526"></SolidColorBrush>
+                    <system:Double x:Key="MenuContentHeaderFontSize">15</system:Double>
+                    <SolidColorBrush x:Key="MenuContentHeaderTextColor" Color="#ADADAD"></SolidColorBrush>
+
+                    <SolidColorBrush x:Key="MenuEditorSeparatorColor" Color="#1E1E1E"></SolidColorBrush>
+                    
+                    <SolidColorBrush x:Key="EditorBackColor" Color="#1E1E1E"></SolidColorBrush>
+                    <SolidColorBrush x:Key="EditorFontColor" Color="#D4D4D4"></SolidColorBrush>
+                    <SolidColorBrush x:Key="EditorLineNumberColor" Color="#5A5A5A"></SolidColorBrush>
+
+                    <FontFamily x:Key="FiraMono">pack://application:,,,/Ui/Assets/Fonts/#Fira Mono</FontFamily>
+                    <FontFamily x:Key="FiraSans">pack://application:,,,/Ui/Assets/Fonts/#Fira Sans</FontFamily>
+
+                    <css:StyleSheet x:Key="appStyleSheet"></css:StyleSheet>
+                    <css:StyleSheet x:Key="InternalStyle" xml:space="preserve"></css:StyleSheet>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
