--- a/tools/Pliant.Workbench/Ui/Styles/app.scss
+++ b/tools/Pliant.Workbench/Ui/Styles/app.scss
@@ -1,12 +1,1 @@
-﻿Window {
-	Background: #333333;
-	Foreground: #ffffff;
-}
-
-Button {
-	Foreground: Red;
-	Height: 40;
-	Width: 100;
-	FontSize: 12;
-	Margin: 5;
-}
+﻿
