--- a/tools/Pliant.Workbench/App.xaml
+++ b/tools/Pliant.Workbench/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:css="clr-namespace:XamlCSS;assembly=XamlCSS"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
-             StartupUri="MainWindow.xaml">
+             Startup="App_OnStartup">
     <Application.Resources>
 
         <ResourceDictionary>
