--- a/tools/Pliant.Workbench/Ui/Components/MainMenu/MenuContent/MainMenuContent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/MainMenu/MenuContent/MainMenuContent.xaml
@@ -3,43 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Pliant.Workbench.Ui.Components.MainMenu.MenuContent"
-             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:wpf="clr-namespace:XamlCSS.WPF;assembly=XamlCSS.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             Background="{StaticResource MenuContentBackColor}"
-             >
-    <Grid>
-        <Grid x:Name="mainMenuContainer">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Grid x:Name="menuIconsContainer" Grid.Column="0" VerticalAlignment="Stretch">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" Background="{StaticResource MenuContentHeaderBackColor}">
-                    <TextBlock VerticalAlignment="Center" Foreground="{StaticResource MenuContentHeaderTextColor}" Margin="10,0,10,0" TextAlignment="Center" FontSize="{StaticResource MenuContentHeaderFontSize}">
-                        MAIN MENU
-                    </TextBlock>
-                </StackPanel>
-                <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="20, 10" MouseLeftButtonDown="OpenFolderMenuItem_OnMouseLeftButtonDown">
-                    <iconPacks:PackIconMaterial Kind="OpenInApp" Width="{StaticResource MenuContentIconSize}" Height="{StaticResource MenuContentIconSize}" Foreground="{StaticResource MenuContentIconColor}" VerticalAlignment="Center" Margin="0, 1, 0, 0" />
-                    <TextBlock VerticalAlignment="Center" Foreground="{StaticResource MenuContentFontColor}" Margin="5,0,0,0" TextAlignment="Center" FontSize="{StaticResource MenuContentFontSize}">Open folder...</TextBlock>
-                </StackPanel>
-                <StackPanel Grid.Row="4" Orientation="Horizontal" VerticalAlignment="Center" Margin="20, 10" MouseLeftButtonDown="ExitMenuItem_OnMouseLeftButtonDown">
-                    <iconPacks:PackIconMaterial Kind="ExitToApp" Width="{StaticResource MenuContentIconSize}" Height="{StaticResource MenuContentIconSize}" Foreground="{StaticResource MenuContentIconColor}" VerticalAlignment="Center" Margin="0, 1, 0, 0" />
-                    <TextBlock VerticalAlignment="Center" Foreground="{StaticResource MenuContentFontColor}" Margin="5,0,0,0" TextAlignment="Center" FontSize="{StaticResource MenuContentFontSize}">Exit</TextBlock>
-                </StackPanel>
-            </Grid>
-
-            <ContentControl x:Name="menuContentContainer" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></ContentControl>
+             wpf:Css.Class="menuContent mainMenuContent"
+>
+    <Grid wpf:Css.Class="inner">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" wpf:Css.Class="header">
+            <TextBlock wpf:Css.Class="headerText">MAIN MENU</TextBlock>
         </Grid>
+        <IconButton wpf:Css.Class="menuItem" Grid.Row="1" MaterialIcon="OpenInApp" Text="Open folder..."></IconButton>
+        <IconButton wpf:Css.Class="menuItem" Grid.Row="3" MaterialIcon="ExitToApp" Text="Exit"></IconButton>
     </Grid>
 </UserControl>
