--- a/tools/Pliant.Workbench/Ui/Components/MainMenu/MenuContent/MainMenuContent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/MainMenu/MenuContent/MainMenuContent.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:wpf="clr-namespace:XamlCSS.WPF;assembly=XamlCSS.WPF"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:wpf="clr-namespace:RapidCSS.WPF;assembly=RapidCSS"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              wpf:Css.Class="menuContent mainMenuContent"
@@ -18,7 +18,7 @@
         <Grid Grid.Row="0" wpf:Css.Class="header">
             <TextBlock wpf:Css.Class="headerText">MAIN MENU</TextBlock>
         </Grid>
-        <IconButton wpf:Css.Class="menuItem" Grid.Row="1" MaterialIcon="OpenInApp" Text="Open folder..."></IconButton>
-        <IconButton wpf:Css.Class="menuItem" Grid.Row="3" MaterialIcon="ExitToApp" Text="Exit"></IconButton>
+        <IconButton wpf:Css.Class="menuItem" Grid.Row="1" MaterialIcon="OpenInApp" Text="Open folder..." Click="OpenFolderMenuItem_OnClick"></IconButton>
+        <IconButton wpf:Css.Class="menuItem" Grid.Row="3" MaterialIcon="ExitToApp" Text="Exit" Click="ExitMenuItem_OnClick"></IconButton>
     </Grid>
 </UserControl>
