--- a/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Pliant.Workbench.Ui.Components.OpenFileDialog"
              xmlns:fileTreeView="clr-namespace:Pliant.Workbench.Ui.Controls.FileTreeView"
+             xmlns:wpf="clr-namespace:RapidCSS.WPF;assembly=RapidCSS"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             wpf:Css.Class="openFileDialog">
     <Grid x:Name="openFileDialogContainer">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
