--- a/tools/Pliant.Workbench/Ui/Controls/GrammarEditor.xaml
+++ b/tools/Pliant.Workbench/Ui/Controls/GrammarEditor.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-             xmlns:wpf="clr-namespace:XamlCSS.WPF;assembly=XamlCSS.WPF"
+             xmlns:wpf="clr-namespace:RapidCSS.WPF;assembly=RapidCSS"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              wpf:Css.Class="grammarEditor">
