Initial work on file tree view

--- a/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/DialogWindow.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/DialogWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pliant.Workbench.Ui.Components.OpenFileDialog"
         mc:Ignorable="d"
-        Title="DialogWindow" Height="300" Width="300">
+        Title="" Height="300" Width="300">
     <Grid>
         <ContentControl x:Name="dialogContent"></ContentControl>
     </Grid>
