--- a/tools/Pliant.Workbench/Ui/Styles/app.scss
+++ b/tools/Pliant.Workbench/Ui/Styles/app.scss
@@ -1,6 +1,6 @@
 ﻿.main {
 	Background: #1E1E1E;
-	
+
 	#appContainer {
 	
 		#mainMenu {
@@ -79,5 +79,5 @@
 }
 
 .openFileDialog {
-	Background: Green;
+	Background: #333333;
 }
