--- a/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Pliant.Workbench.Ui.Components.OpenFileDialog"
              xmlns:fileTreeView="clr-namespace:Pliant.Workbench.Ui.Controls.FileTreeView"
              xmlns:wpf="clr-namespace:RapidCSS.WPF;assembly=RapidCSS"
+             xmlns:vm="clr-namespace:Demo.ViewModel;assembly=RapidFx"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              wpf:Css.Class="openFileDialog">
@@ -14,8 +15,9 @@
             <RowDefinition></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        
-        <fileTreeView:FileTreeView x:Name="fileTreeView" Grid.Row="0"></fileTreeView:FileTreeView>
+
+        <fileTreeView:FileTreeView x:Name="fileTreeView" Grid.Row="0" ShowRoot="True">
+        </fileTreeView:FileTreeView>
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
