--- a/tools/Pliant.Workbench/App.xaml
+++ b/tools/Pliant.Workbench/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:rapidCss="clr-namespace:RapidCSS;assembly=RapidCSS"
              Startup="App_OnStartup">
     <Application.Resources>
 
@@ -32,8 +33,8 @@
                     <FontFamily x:Key="FiraMono">pack://application:,,,/Ui/Assets/Fonts/#Fira Mono</FontFamily>
                     <FontFamily x:Key="FiraSans">pack://application:,,,/Ui/Assets/Fonts/#Fira Sans</FontFamily>
 
-                    <StyleSheet x:Key="appStyleSheet"></StyleSheet>
-                    <StyleSheet x:Key="InternalStyle" xml:space="preserve"></StyleSheet>
+                    <rapidCss:StyleSheet x:Key="appStyleSheet"></rapidCss:StyleSheet>
+                    <rapidCss:StyleSheet x:Key="InternalStyle" xml:space="preserve"></rapidCss:StyleSheet>
                 </ResourceDictionary>
 
             </ResourceDictionary.MergedDictionaries>
