--- a/tools/Pliant.Workbench/Ui/Components/MainMenu/MainMenuComponent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/MainMenu/MainMenuComponent.xaml
@@ -22,11 +22,11 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <IconButton Grid.Row="0" FaIcon="ListUl" wpf:Css.Class="menuItem first" Click="MainMenuItem_OnClick"></IconButton>
+            <IconButton Grid.Row="0" FaIcon="ListUl" IconSize="27" wpf:Css.Class="menuItem first" Click="MainMenuItem_OnClick"></IconButton>
 
-            <IconButton Grid.Row="1" OctIcon="File" wpf:Css.Class="menuItem" Click="ExplorerMenuItem_OnClick"></IconButton>
+            <IconButton Grid.Row="1" OctIcon="File" IconSize="27" wpf:Css.Class="menuItem" Click="ExplorerMenuItem_OnClick"></IconButton>
 
-            <IconButton Grid.Row="3" OctIcon="Gear" wpf:Css.Class="menuItem last" Click="SettingsMenuItem_OnClick"></IconButton>
+            <IconButton Grid.Row="3" OctIcon="Gear" IconSize="27" wpf:Css.Class="menuItem last" Click="SettingsMenuItem_OnClick"></IconButton>
             
         </Grid>
         
