--- a/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
@@ -7,10 +7,11 @@
              xmlns:fileTreeView="clr-namespace:Pliant.Workbench.Ui.Controls.FileTreeView"
              xmlns:wpf="clr-namespace:RapidCSS.WPF;assembly=RapidCSS"
              xmlns:vm="clr-namespace:Demo.ViewModel;assembly=RapidFx"
+             xmlns:pathTextBox="clr-namespace:Pliant.Workbench.Ui.Controls.PathTextBox"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              wpf:Css.Class="openFileDialog">
-    <Grid x:Name="openFileDialogContainer">
+    <Grid x:Name="openFileDialogContainer" Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
@@ -23,7 +24,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Text="{Binding RelativeSource={RelativeSource AncestorType=local:OpenFileDialogComponent, AncestorLevel=1}, Path=RootPath}"></TextBlock>
-            <TextBox Grid.Row="1"></TextBox>
+            <pathTextBox:PathTextBox Text="{Binding RelativeSource={RelativeSource AncestorType=local:OpenFileDialogComponent, AncestorLevel=1}, Path=TypedPath, Mode=TwoWay}"></pathTextBox:PathTextBox>
         </Grid>
         
         <Grid Grid.Row="1">
